# FeralFeed

./: .gitignore  LICENSE  SCHEMA.sql  VISION.md  app.py  config_private.json  config_public.json  db.py  pyproject.toml  requirements.txt
model/: __init__.py  dataset.py  evaluate.py  final-weights-low-dropout-18-0.68.hdf5  predict.py  train.py
static/: base.css
static/css/: about.css  base.css  feed.css
static/css/auth/: sign_in_up.css
static/js/: feed.js
static/js/auth/: about.js  sign_in.js  sign_up.js
templates/: about.html  base.html  comments.html  contact.html  feed.html  landing.html  login.html  settings.html  tags.html  thankyou.html
templates/auth/: sign_in.html  sign_up.html
